--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -110,7 +110,85 @@ to summarize where pop music was in 2007 and my relationship with it.
   <iframe style="border-radius:12px" 
   src="https://open.spotify.com/embed/playlist/54ilAeceSBVelfhppPOXuw?utm_source=generator&theme=0" 
   width="100%" height="380" frameBorder="0" allowfullscreen="" 
-  allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+  allow="autoplay; clipboard-write; encrypted-media; fullscreen;
+  picture-in-picture"></iframe>
+  
+- *Pocket Symphony* by **Air** - A colder more somber record from these guys
+  that fits in very well with their other work. It is happy to sit in the
+  background in a way their other records do not. That icy, sterile album cover
+  is a perfect summary. [*Memory*: I remember Greg from City Lights Records
+  telling me he liked to put this on as he was starting his day in the store.
+  That sounds just right to me.]
+
+- *American Doll Posse* by **Tori Amos** - This was the beginning of a Tori
+  revival for me, and the start of a revival for the artist. I think playing a
+  few "alternate roles" for the concept of this record was freeing, and we got
+  something considerably more interesting than what had come immediately before.
+  Every album since this one has been a winner. So many different styles on this
+  record from the mid-tempo singer-songwriter fare of "Bouncing Off of Clouds"
+  to the rocking "Teenage Hustling" to the classic devastating story song
+  balladry of "Roosterspur Bridge". [*Memory*: I saw Tori for the first time on
+  this tour, when it came to Pittsburgh. It was a halloween show and the crowd
+  really took the costume thing very seriously.]
+
+- *New Magnetic Wonder* by **The Apples in Stereo** - I was very into Elephant 6
+  at the time and was very interested that one of the original bands was still
+  making new music. This was the first of two records in a a very **ELO** style,
+  with some weird atonal experiments thrown in. Some stunning pop music, that
+  makes me sad that Robert Schnieder has largely retired from performing.
+  [*Memory*: At the time I didn't like the shift to **Jeff Lynne** territory,
+  but wow do I prefer it to the garage psych of their early records now.]
+
+- *Or Give Me Death* by **Aqueduct** - Even more than the first record, this
+  album sounds a bit like what would happen if **Modest Mouse** went full blown
+  pop. Some really interesting, intricate songs. I really wish more folks had
+  found these guys so they could have made more music. [*Memory*: I saw them as
+  an opening act at Water Street, a few years after this record came out. I
+  think I was the only one who was familiar with their stuff. Great show.]
+
+- *Neon Bible* by **Arcade Fire** - Until the awful **Everything Now** was
+  released, this was my least favorite of their albums. Unlike that mess, I
+  still really like this one. It was never going to live up to the incredible
+  debut, but there is a lot here to like. I especially enjoy the church organ
+  and pomp of "Intervention" and "My Body is a Cage". [*Memory*: I waited a
+  really long time to buy this one on vinyl. I'm not sure why, as this is a
+  brilliant record that sounds great on the analog format.]
+
+- *Mirrored* by **Battles** - A really cool, percussion forward post-rock album.
+  Not quite math rock, but still lots of interesting rhythms. They would never
+  make something this interesting again. [*Memory*: This kind of defines the
+  line for an album I like, but don't need to own on vinyl. I've considered it
+  many times, but really digital is good enough for this. Why, I'm not exactly
+  sure.]
+
+- *Flying Club Cup* by **Beirut** - One of those bands, where I like much of
+  their music, but love only a few things. This is by far my favorite of their
+  records. It is a much stronger statement with solid songwriting throughout. "A
+  Sunday Smile" has those nostalgic, highly melodic, feel good vibes that is
+  their best sound. [*Memory*: I saw Owen Pallet join them on some of these
+  tunes at Pitchfork 2009, and it is the moment you see in the banner above.]
+
+- *..are the Dark Horse* by **The Besnard Lakes** - A really nice low-fi, psych
+  record with some cool little **Beach Boys** elements. They would milk this
+  formula to good effect for a few more records, but this will always be my
+  favorite. "For Agent 13" is my favorite use of shortwave numbers stations in a
+  song. [*Memory*: When I started buying vinyl records, this was one of the
+  first recent releases I picked up. It was also one of the first records that
+  made me realize the shortcomings of vinyl production, when it arrived covered
+  in scuffs.]
+
+- *Armchair Apocrypha * by **Andrew Bird** - I know many people consider this
+  the inferior follow-up, but I prefer it to anything else in his catalog. I
+  think it focusses more on straight ahead indie rock in a way that serves the
+  purpose well. The slick use of the looper and strings is still there, but the
+  songs are sharper and catchier. That said, this isn't something I am
+  revisiting often today. [*Memory*: I saw him on this tour at the State Theater
+  in State College, PA. I really enjoyed the show. Only a few years later I saw
+  him in Rochester and it was awful. Had the performance changed, or had I?]
+
+
+
+
 
 2008
 ----
