--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -186,9 +186,203 @@ to summarize where pop music was in 2007 and my relationship with it.
   in State College, PA. I really enjoyed the show. Only a few years later I saw
   him in Rochester and it was awful. Had the performance changed, or had I?]
 
+- *23* by **Blonde Redhead** - A really nice midpoint between dream-pop and
+  straight ahead indie rock. I didn't realize it at the time since I was
+  discovering them well into their career, but this is the sound of an "old
+  indie" band updating their sound to fit right in with the new scene of the
+  moment. [*Memory*: I have to admit, I bought this as much for the striking
+  cover as for the solid reviews. Surely one of the last times I picked a record
+  that way?]
 
+- *Andorra* by **Caribou** - It doesn't seem like it today, because this kind of
+  thing is everywhere now, but this kind of psychedelic, electronic thing was
+  very innovative at the time. He would have two great records after this, but
+  this was the peak. A great mix of pop and experimentation. [*Memory*: I'm a
+  bit ashamed to admit that back in these days I was getting almost anything
+  Pitchfork gave BNM to that sounded half wise interesting. The indie stuff was
+  all on Emusic, and an album was about 2-3 bucks there. It was worth it to even
+  hate listen the thing. This one really worked out.]
 
+- *Friend Opportunity* by **Deerhoof** - My first record of theirs, and still my
+  favorite. The perfect mix of the punk aggression and the pop cuteness. The
+  definitive early 2000s indie band at their peak. Such complex, unusual music
+  that manages to be unbelievably re-listenable. I'll never get sick of this
+  record. [*Memory*: This was an amazing time for musical discovery. The tools
+  at my disposal to hear new things and rise of indie created a unique situation
+  I will never see again. Every couple weeks I was discovering a new favorite
+  band like this that already had a half a dozen or so great albums.]
 
+- *Copia* by **Eluvium** - It is hard to make ambient music that really stands
+  out. This is gorgeous, and wholely unique. There isn't anything else out there
+  with this same kind of warm but vacant vibe. The title of the track "Indoor
+  Swimming at the Space Station" really captures the scene well. [*Memory*: I
+  was really into the ambient works by Eno at the time and when I saw a modern
+  ambient record getting good press, I had to check it out.]
+
+- *Widow City* by **The Fiery Furnaces** - A number of indie pop acts had been
+  becoming increasingly weird over the last decade or so, and these guys started
+  out the weirdest of them all. This is a lot to digest. The funky keyboards,
+  the Zeppelin-esque hard rock guitar, Emily Freidberger's off-kilter delivery
+  of her brothers weird poetry, all framed by mostly jaunty piano based pop
+  songs. Peak weird suited these guys best of all. [*Memory*: At the time, they
+  had been so productive it was easy to assume this would go on indefinitely.
+  Little did we know we would get only one more (fairly conservative) effort,
+  and the sibling band would go on permanent hiatus.]
+
+- *The Good, The Bad, and the Queen* by **The Good, The Bad, and the Queen** -
+  The work of a unusual supergroup that ends up sounding more like the somber,
+  non-fiction continuation of its most famous member's former band (Blur). A
+  brilliant meditation on the role of England in the 21st century. For almost 10
+  years, this was the most valuable record in my collection, and it deserved to
+  be so. It is a cult classic of the highest order, and one of my very
+  favorites. [*Memory*: In 2007 I took two trips to the UK for business. Both
+  times I was able to get up to London to do some tourist stuff. This album
+  became the soundtrack to the first trip and I streamed it repeatedly on my
+  trusty old iPod nano. On the second trip I saw a special performance of the
+  record in the moat of the Tower of London. What a memory I will cherish
+  forever!]
+
+- *White Chalk* by **PJ Harvey** - [**2007 FAVORITE**] What a left turn for
+  Polly Jean. The guitar is almost gone. The muscular vocals are no more,
+  replaced with her "church voice". The aesthetic of this album is remarkable.
+  Barely proficient enough to make a piano based record, she finds incredible
+  songs in the simple arrangements. The creepy victorian attire she matched to
+  this music really completed the scene. Already an all-time great, this is
+  where it went to the next level. [*Memory*: I was already going to City Lights
+  every Tuesday to pick up the latest releases, but I particularly remember
+  rushing out as soon as the store opened that September to pick this one up.]
+
+- *Cross* by **Justice** - While **Daft Punk** generally get all the attention
+  these guys made the foremost masterpiece of French Electronic music right
+  here. Everything is perfect, from the bombast of "Genesis", through the pure
+  joy of "D.A.N.C.E." to the wonderful crassness of **Uffie's** rap on "The
+  Party". This might be the best electronic dance music ever made. [*Memory*: I
+  used to like to play this during my runs at the time. I remember playing it
+  over the stereo system in the work gym one time and being really embarrassed
+  when **Uffie** started in on her rap, lol.]
+
+- *Sound of Silver* by **LCD Soundsystem** - It can be hard to remember that
+  before EDM ruined things, electronic music was was of the most interesting and
+  fertile grounds for new musical ideas. They aren't really doing anything new
+  here, but the combination of Krautrock grooves, disco beats, and New Wave
+  vocals was the perfect pallette for some great songs. "Someone Great" is a top
+  10 all-time track. [*Memory*: I was already sold on these guys from their
+  early singles and was right on this album when it was released. I remember
+  Greg at City lights being very lukewarm. I remember telling one of the trendy
+  interns at work about it, and how meh they were. It eventually became regarded
+  as an all time classic. I felt very ahead of the curve.]
+
+- *Night Falls over Kortedala* by **Jens Lekman** - This is a weird case. A
+  classic album, that the artist decided to replace with a completely new
+  version. I think I still like the original more, since it has a wonderful
+  quaintness that isn't quite as strong on the new version. It is a guy trying
+  to make the symphonic **Scott Walker** records in his bedroom. The kind of
+  pure pop singing that only Scandinavians are allowed to do these days.
+  [*Memory*: This was the first year that I reviewed the top albums lists by the
+  major sites. This one was very high on the Pitchfork list and I gave it a
+  shot.]
+
+- *Memory Almost Full* by **Paul McCarney** - Paul clearly was becoming aware of
+  the peaking indie rock scene, and it shows. One of his strongest later year
+  efforts, especially the power pop of "Only Mamma Knows" and the eccentric
+  vocoder and harpsichord experimental pop of "Feet in the Clouds". [*Memory*:
+  I remember listening to this on my Sansa as I waited for my plane from
+  Heathrow to Dublin, drinking a Sam Smith Oatmeal Stout right at the gate.]
+
+- *Obligatory Villagers* by **Nellie McKay** - It is weird that her best album
+  is almost impossible to hear these days, and I'm glad to have the physical CD
+  (I assume there are rights issues). The perfect combination of comical
+  commentary and top notch songwriting. This time with an amazing collection of
+  jazz musicians to give everything a dramatic cabaret feel. [*Memory*: Soon
+  after this album, she did a video with NPR music that documented her
+  songwriting process, which was quite remarkable.]
+
+- *Friend and Foe* by **Menomena** - The first shot fired in the "floor tom
+  band" scene. This highly percussive brand of melodic indie rock was super
+  novel at time, but would be cliche less than a year later. Still a solid
+  record, but it is hard to hear it the same way after all the soundalikes. The
+  sax does add a little something extra that makes this hold up a bit better
+  than the rest. [*Memory*: These guys hold the unique distinction of being a
+  band I have seen live, but do not really remember having seen. I saw them in
+  Philly in 2010, and remember it as being a good show, but nothing else really.
+  At least I have the shirt to prove I was there.]
+
+- *Challengers* by **The New Pornographers** - An outstanding record that both
+  shows what a great pop band they are together, but the strengths that the
+  three primary songwriters have as individuals. Also some great vocals from new
+  member Kathryn Calder, especially "Adventures in Solitude". "My Rights Versus
+  Yours" is one of the greatest opening tracks ever. The way it slowly builds to
+  introduce the sounds of the record is first rate album sequencing. [*Memory*:
+  At first I wasn't so sure about the mellower mood of this record, but I now
+  appreciate this as one of their finest efforts.]
+
+- *Boxer* by **The National** - The pivot album between the more punk influenced
+  sounds of the first few records, and the mid-tempo alt-rock that would come.
+  First rate musicianship throughout, and Matt Berninger's voice is as rich and
+  textured as it would ever be. "Mistaken for Strangers" is the finest product
+  of their early phase. [*Memory*: I was so resistant to these guys, and refused
+  to engage with this record when it was new. All of a sudden when I hit my 30s,
+  I liked few bands more.]
+
+- *Hissing Fauna, You Are the Destroyer* by **Of Montreal** - The album where
+  his bedroom psych pop went dance. It wasn't as big of a tweak as it sounded at
+  the time, but it was apparently the move that made the world appreciate the
+  talent that had always been there. [*Memory*: I remember playing this CD in my
+  office after a visit to City Lights Records on new music Tuesday. The uptempo
+  dance groove was a bit shocking to me as a long time fan, but I was on board
+  for the new sounds from the start. I was shocked that the general public was
+  too. It was a unique time.]
+
+- *The Stage Names* by **Okkervil River** - This was a straightforward indie
+  rock pallette cleanser in one of the most experimental eras. The definition of
+  NPR music, it is quaint but not bland, and often quite pretty. "Savannah
+  Smiles" is a particular highlight. [*Memory*: I saw these guys in Rochester on
+  the next album cycle. It was clear from the setlist that they recognized this
+  as their best work.]
+
+- *Ga Ga Ga Ga Ga* by **Spoon** - Indie rock was peaking and new buzz bands were
+  emerging every week. Some of the American indie acts that had been at it since
+  the late 90s were raising to prominence in a whole new way. This was the
+  record where Austin's biggest secret used their heightened influence to make a
+  very big, Motown tinged record. It was their highest point. [*Memory*: There
+  are two times in my life I had to pull over my car because I heard a new song
+  that was too good for me to concentrate. "You Got Yr. Cherry Bomb" was one of
+  them.]
+  
+- *Marry Me* by **St. Vincent** - Far smaller, but no less complex, the contrast
+  is stunning with where the artist is now. I miss the sound of this record (and
+  the one that came later). Somehow she has gotten way noisier and flashier, yet
+  way more boring. These ornate, but subtle home recordings are some of the
+  finest songs in indie-pop history. I try to not be one of those people who
+  complain about artists selling out for mainstream fame, but I can't see
+  anything else here. [*Memory*: I downloaded this record from eMusic based
+  purely on their review. I got so much great music off of that site.]
+
+- *In Our Bedroom After the War* by **Stars** - I know the record before this is
+  supposed to be the classic (and it is a perfectly fine indie pop record) but
+  this will always be my favorite. Such sweet little songs with strong
+  melodies and warm vocals. Every now and then they show glimpses of something
+  more than pop, like the jazz influenced "My Favorite Book". [*Memory*: One of
+  those records I listened to on repeat on my Sansa MP3 player during lunchtime
+  walks at work around the East College Ave area.]
+
+- *Random Spirit Lover* by **Sunset Rubdown** - A wonderfully strange record.
+  Low budget indie-prog made by an artist who had won fame making straight ahead
+  indie rock with his other band **Wolf Parade**. I assume that connection was
+  the only reason the general music press even cared about this, but I'm glad it
+  was brought to my attention. You get the impression that the musicians being
+  stretched way beyond their ability, but what they produced ended up amazing
+  anyway. "Stallion" is so over the top and outrageously good. [*Memory*: When I
+  started buying Vinyl LPs, this was one of the first things I sought out. This
+  is meant for physical media.]
+
+- *All Hour Cymbals* by **Yeasayer** - **Menomena** were first, but this was the
+  record that broke the sound. One of those discs that would spawn a million
+  imitators, this kind of percussive, dance-able indie-pop would be pervasive
+  over the next half decade. While this band would soon move on to other
+  things, they leave behind one of the finest and most interesting entries in
+  the sub-genre. [*Memory*: I distinctly remember listening to this for the
+  first time waiting for an early AM flight at the State College, PA airport.]
 
 2008
 ----
@@ -827,3 +1021,36 @@ you spot it? I'm certainly not going to go through the process of making it agai
   NY. I used the Shazaam music matching service to find it, and immediately
   downloaded from eMusic. I was pleasantly surprized to see these guys play a
   great opening set for **Ghost** half a decade later.]
+
+Footnotes
+---------
+
+Bookmarks for now:
+
+**Elephant 6**
+
+**Genesis/Prog**
+
+**Eno/Roxy Music**
+
+**Goth/Punk/New Wave**
+
+**Post-Rock**
+
+**Game Music**
+FFVIII, FFVX, Xenosaga, F-Zero, Mega-Man, Actraiser, VGRemix
+
+**Hip Hop / Rap** - 
+Dr. Dre, DMX, Jay-Z, Ludicris, Missy Elliot, Outkast, Killer Mike, Kanye West
+
+**Napster / MP3s / iTunes**
+
+**Classical Music**
+Rachmaninoff, Beethoven, Chopin, Brahms, Janacek
+
+**Satellite Radio**
+Beyond Jazz, Alt Nation, First Wave, Left of Center, XMU, The Verge, Liquid
+Todd, The Vault
+
+**Rochester Radio**
+WRUR, WITR, WBER
