--- a/src/music/2010s.rst
+++ b/src/music/2010s.rst
@@ -225,7 +225,7 @@ complicated. Eleven years later, here we are.
   their other work. I really have to be in the right mood for this. [*Memory*:
   It is hard to think of this band without also remembering hipster runoff]
 
-- *Halcyon Digest* by *Deerhunter* - I see the career of this band like a
+- *Halcyon Digest* by **Deerhunter** - I see the career of this band like a
   projector being brought into focus. The earlier records got progressively less
   fuzzy and you could see a wonderful image taking shape. That picture is
   perfectly formed here. The wonderful pop hooks bring everything together
@@ -1930,7 +1930,7 @@ ensembles. My biggest discoveries were:
   music. The Reiner/CSO recording is so definitive I feel like modern
   performances try to imitate it.
 
-- *Syphony in D Minor* by **Cesar Franck** - An interesting symphony from the
+- *Symphony in D Minor* by **Cesar Franck** - An interesting symphony from the
   early 20th century that seems to anticipate minimalism with a unusually (for
   the time) repetitious form and gets its interest from variations of intensity
   and instrumentation. I've seen this performed live an unusual number of times
