--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -18,7 +18,7 @@ Coming Soon
 
 *Section complete*: TBD
 
-*Latest update*: 05 Aug 2022
+*Latest update*: 27 Aug 2022
 
 *Total Albums*: TBD
 
@@ -33,6 +33,51 @@ TBD
 *Favorite Song*:
 
 TBD
+
+2006
+----
+
+When I look at the picture below I'm struck by how many different ways I
+discovered these records. Some of these were the latest releases from acts I had
+been following for some time, but mostly they were completely new things. There
+are songs I heard on Sirius or XM satellite radio. There are things that were
+the hot albums on the indie music blogs of the day. There were small indie
+releases that were recommended by eMusic. There are 3 (!) albums that I
+discovered watching a UK music countdown show, repackaged as cheap filler
+content on the obscure US Cable network, HDNet. There is a album with a track I
+heard on a iMac commercial. Some of these were the top records on RateYourMusic,
+back when tastes were a little different there (more indie and mainstream). I
+was still using the AllMusic guide to do genre studies (in this case post-rock).
+There is an album I ran out and bought on the drive home from the local brewpub,
+where I heard it playing in the background.
+
+This is also the year where I have bar far the most releases that I would like
+to own on vinyl that I do not. In many cases, these records never saw a vinyl
+release, and are obscure enough that one is not likely to ever happen. As a
+result, there is quite the unsightly stack-up of CDs on the side of the image.
+This almost encapsulates the unsightliness of the CD as a format. The art is too
+small to be appreciated, and no matter how well you tried to take care of those
+jewel cases they are scratched up and a little cracked. Many of those discs were
+bought at City Lights Records, where I had started to shop when my old favorite
+store, Mike's Movies and Music had closed. Many came from Amazon, in some cases
+imported from the UK (a new practice that I had adopted). One of these CDs, was
+imported from the UK by myself personally!
+
+More than anything I'm looking at the image below and feeling powerful waves of
+nostalgia. This was the music of my younger self. A person I can relate to, but
+no longer completely am. I glad, I can always revisit my former self though
+these albums.
+
+.. image:: images/2006.jpg
+  :width: 900
+  :alt: My 2008 favorite albums
+
+.. raw:: html
+
+  <iframe style="border-radius:12px" 
+  src="https://open.spotify.com/embed/playlist/4jmNhlF28Q5SmCzP1Eq5yA?utm_source=generator&theme=0" 
+  width="100%" height="380" frameBorder="0" allowfullscreen="" 
+  allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
 2007
 ----
@@ -1039,6 +1084,12 @@ Bookmarks for now:
 
 **Game Music**
 FFVIII, FFVX, Xenosaga, F-Zero, Mega-Man, Actraiser, VGRemix
+
+**XTC**
+
+**Wire**
+
+**UK Indie/The Jam/The Kinks/Amazon Imports**
 
 **Hip Hop / Rap** - 
 Dr. Dre, DMX, Jay-Z, Ludicris, Missy Elliot, Outkast, Killer Mike, Kanye West
