--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -65,7 +65,7 @@ imported from the UK by myself personally!
 
 More than anything I'm looking at the image below and feeling powerful waves of
 nostalgia. This was the music of my younger self. A person I can relate to, but
-no longer completely am. I glad, I can always revisit my former self though
+no longer completely am. I glad that I can always revisit my former self though
 these albums.
 
 .. image:: images/2006.jpg
@@ -77,7 +77,102 @@ these albums.
   <iframe style="border-radius:12px" 
   src="https://open.spotify.com/embed/playlist/4jmNhlF28Q5SmCzP1Eq5yA?utm_source=generator&theme=0" 
   width="100%" height="380" frameBorder="0" allowfullscreen="" 
-  allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+  allow="autoplay; clipboard-write; encrypted-media; fullscreen;
+  picture-in-picture"></iframe>
+  
+- *Beach House* by **Beach House** - Listening to this is quite startling
+  knowing the band they are today. This is a much smaller, slower, and
+  meandering record than what they do now. This slight record was certainly
+  enough to get me interested back then, and I still really like it today.
+  [*Memory*: I found out about these guys as an eMusic recommended artist. I
+  remember Greg at city lights being impressed how ahead of the scene I was that
+  time. I also remember buying my vinyl copy at Amoeba records in San Francisco
+  in 2009 and being surprised that they were making vinyl reissues of relatively
+  recent indie records.]
+
+- *The Life Pursuit* by **Belle and Sebastian** - It is hard to remember now,
+  but this was a controversial record when it came out. The transition to
+  straight ahead pop they had started on their previous record was now complete.
+  Everyone missed the half-folk and chamber elements, and it was widely regarded
+  as sub-par. I really enjoyed these back to basics pop songs back then, and
+  now consider this their finest record. This was also the album when Stevie
+  Jackson and Sarah Martin really started to play a larger, and quite welcome
+  role in the band. The mix of the three primary vocalists had become the
+  signature sound of the band. It was almost like they had become a more twee
+  and gentle **New Pornographers**.
+
+- *Let's Get Out Of This Country* by **Camera Obscura** - The Scots understand
+  indie pop like no other nation on earth. This might be the finest record in
+  the whole genre. Back when hit indie records were a thing, this was one of the
+  biggest. Everywhere from Pitchfork, Stereogum, NPR Music, and Spin wanted you
+  to listen to this thing. Every service recommended it as a download, and it
+  climbed the RateYourMusic charts in a way music like this can't anymore. Holds
+  up. [*Memory*: This was the first real concert I attended in Rochester, NY. I
+  remember walking down the German house in 2009, and being excited that I could
+  see bands like this in the town I lived in. This would be the beginning of
+  three great years of shows.]
+
+- *The Crane Wife* by **The Decemberists** - This was the start of a new phase
+  for a band that always liked drama, but now were completely centered on
+  telling grand stories. A little preview of the proggyness that would fully
+  form on the next one, this was still mostly the indie-folk of the first three
+  records. This whole record tells a story that I've never been able to follow,
+  but it doesn't matter because the songs are so strong. A great guest spot by
+  **Laura Veirs** on "Yankee Bayonet" as well. [*Memory*: I remember this being
+  voted the top album of 2006 by NPR listeners and feeling a little bit old that
+  my tastes aligned with that group. It isn't my favorite from the year any
+  longer, but it is close!]
+
+- *Victory of the Comic Muse* by **The Divine Comedy** - After a couple more
+  serious records, Neil Hannon allows himself a little levity again. One of the
+  very last of his records for me to warm up to, it joins the rest of the
+  catalog as a favorite. He is probably the most consistent artist I know of.
+  [*Memory*: I think I had only heard this once or twice before buying the
+  entire vinyl reissue series.]
+
+- *The Bright Lights and What I Should Have Learned* by **Duels** - A late entry
+  in the UK indie scene, it is a mostly guitar based Brit-pop derivative sound
+  with a sprinkling of the keyboards the USA kids were getting into. I think it
+  was because this sat uncomfortably between UK indie and the contemporary
+  mainstream sound that this didn't really find an audience despite being a
+  really crisply put together record with some interesting sounds. Weirdly, this
+  sounds a bit like the kind of "mindie" music that was about to become very
+  widely popular in the USA. [*Memory*: I found out about these guys by watching
+  "London Live" a repackaging of a UK countdown show that was filler material
+  for an early HDTV channel called HDNet. The performance of  the song "Animal"
+  had an really fresh, dance-able sound that seemed to anticipate what was about
+  to come in North American Indie.]
+
+- *Tuesday Wonderland* by **Esbjorn Svensson Trio** - In the 2000s jazz
+  experienced a new kind of fusion, this time with indie and experimental rock
+  music. These guys made several of the most important records in the movement.
+  The startling **Radiohead**-esque "Fading Maid Preludium/Postludium" bookends
+  a set of music that is only slightly more in line with conventional Piano
+  jazz. The releases after this would get a little too difficult for me, and
+  this is the one where the balance between artistry and accessability was most
+  to my liking. [*Memory*: I was spending so much time looking for music, that a
+  fairly obscure record like this one was coming at me from multiple angles. A
+  featured album by NPR music, I was also hearing this on the Beyond Jazz
+  channel on XM radio. I think one of the reasons I like my favorites so much
+  from this era, is that I really picked them from a large number of things I
+  had heard.]
+
+- *S/T* by **Electric President** - One of the records that followed on from the
+  gentle indie-electronic sound of **The Postal Service**, but this one was much
+  slower and more somber. I also like how these guys played around with song
+  structure, there are bridges and unexpected transitions everywhere. This was
+  really interesting stuff that never found the audience it deserved. [*Memory*:
+  I had been a subscriber to Sirius Satellite radio since the summer of 2003,
+  and it had become a primary influence on my listening. I had always heard that
+  XM had a much wider playlist, but didn't really have a full appreciation until
+  I heard some XM jazz programming during an Orange Bowl trip in early 2006. I
+  immediately subscribed upon my return, and "Good Morning, Hypocrite" from this
+  record was one of the first tracks I heard on their indie station, XMU. I can
+  almost still picture that song title in the saved track list on my portable
+  XM receiver sitting on the dash of my old Purple Dodge Neon. I miss the old
+  XM.]
+  
+
 
 2007
 ----
