--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -51,7 +51,7 @@ was still using the AllMusic guide to do genre studies (in this case post-rock).
 There is an album I ran out and bought on the drive home from the local brewpub,
 where I heard it playing in the background.
 
-This is also the year where I have bar far the most releases that I would like
+This is also the year where I have by far the most releases that I would like
 to own on vinyl that I do not. In many cases, these records never saw a vinyl
 release, and are obscure enough that one is not likely to ever happen. As a
 result, there is quite the unsightly stack-up of CDs on the side of the image.
@@ -70,7 +70,7 @@ these albums.
 
 .. image:: images/2006.jpg
   :width: 900
-  :alt: My 2008 favorite albums
+  :alt: My 2006 favorite albums
 
 .. raw:: html
 
@@ -171,8 +171,214 @@ these albums.
   almost still picture that song title in the saved track list on my portable
   XM receiver sitting on the dash of my old Purple Dodge Neon. I miss the old
   XM.]
-  
 
+- *Bitter Tea* by the **Fiery Furnaces** - This is one of those records where I
+  never understood the prevailing opinion. Somehow this is perceived to be the
+  impenetrably difficult and dense follow-up. If anything this takes the
+  experimentation and proggy-ness of **Blueberry Boat** and adds back in the
+  strong pop component of the early stuff. Things like "Waiting to Know You" do
+  an amazing job balancing the weirdness with the sweetness. I like this record
+  way more than 95% of the human population. [*Memory*: This was the time when
+  you could buy an unpopular record on vinyl at a steep discount. I don't know
+  if I even paid 10 bucks for a nice new copy of this.]
+
+- *Just Like the Fambly Cat* by **Grandaddy** - It took me a while, but I came
+  to appreciate the last record from the first tenure of these guys. Some
+  serious punk aggression (especially on the hardcore homage "50%") has been
+  added to the usual low-key, often downtrodden psych-pop. This would have been
+  a great statement to end on, and I haven't liked what has come since nearly as
+  much. [*Memory*: I listened to this a lot on headphones around the time I
+  lived in my little Park Ave apartment. I still like to crank it through cans
+  every now and then. The fuzz sounds great that way.]
+
+- *Yellow House* by **Grizzly Bear** - I didn't like this very much when it
+  first came out to great acclaim. I connected much more with the next record,
+  which featured far more conventional songs. I think after I had that blueprint
+  to follow, I could better appreciate this more abstract work. [*Memory*: This
+  was strangely difficult to hear for a massive indie hit. It wasn't on eMusic,
+  and I don't recall ever seeing the CD appear at City Lights (or Best Buy). It
+  was also out of print on vinyl for a shockingly long time, until I got the
+  re-issue that came out in 2022.]
+
+- *Knives Don't Have Your Back* by **Emily Haines** - [**2006 FAVORITE**] - A
+  stunning piano based singer-songwriter record, that is completely unlike
+  anything else I have ever heard. I really think she saves her very best stuff
+  for the rare solo releases, and this outclasses anything from **Metric** by a
+  fair margin. The production on this record is quite exceptional as well, and
+  the dreamy mix really adds a lot to the impact of the top notch lyrics.
+  [*Memory*: I became aware of this album via a post of the excellent video for
+  "Doctor Blind" on Pitchfork. The artist is strolling through an empty
+  department store in a creepy scene that really complements a fairly profound
+  song about the over-prescription of anti-depressants.]
+
+- *The Day I Turned to Glass* by **Honeycut** - A delightful anomaly: hip hop
+  influenced indie rock made by a classically trained cellist. I don't think
+  this ever found its audience, and I'm not sure it really has much of one. I
+  really like it though. Listening today, it sounds a bit ahead of it's time and
+  it fits in well with what is going on in the frontier of R&B. [*Memory* I
+  discovered this ]
+
+- *Howling Bells* by **Howling Bells** - I had been enjoying this record for the
+  better part of a year when someone pointed out to me that it is a bit of a
+  country record. They were right. It is dark kind of country made by
+  Australians, but country nonetheless. This was back when the Bella Union label
+  seemed like it was trending towards some sort of modern day 4AD, and this fits
+  right in with that. "Setting Sun" is one of my favorite songs of all time.
+  [*Memory*: I really struggled to acquire this record. This was another band I
+  discovered on HDNet's "London Live" show. Their performance was a little
+  rough, but I liked it enough to DVR it and watch it over and over again. I
+  remember waiting for a 2007 US release that didn't happen, and I couldn't find
+  a way to import the disc from the UK on Amazon. Eventually I would buy a copy
+  from HMV on my first trip to london in March 2007 and hand carry it back to
+  the USA myself.]
+
+- *Return to Sea* by **Islands** - I like this even more than the much loved
+  **Unicorns** LP, as the more serious tone does it for me. Plenty of whimsey
+  still here, but the epic indie-pop of "Swans (Life After Death)" was a welcome
+  expansion of the wounds used by that prior band. Even "Rough Gem" manages to
+  be silly in a far more epic way. This is big indie-pop. [*Memory*: Another XMU
+  discovery, the expanded playlist of my new satellite radio service was
+  expanding my music collection.]
+
+- *Silent Shout* by **The Knife** - The kind of music only Scandinavians can
+  make properly. Creepy atmospheric, yet highly melodic and certainly not the
+  least bit danceable. This is the electronic music of calm reflection in a dark
+  room. [*Memory*: This was the first time I can remember resisting a Pitchfork
+  hype record out of principle. When I finally relented, it was very clearly an
+  amazing record.]
+
+- *Everything Wrong is Imaginary* by **Lilys** - The Elephant6 adjacent band
+  from Philly ends on a very high note. The superior of the two records to come
+  out of their third phase. The sharply produced shoegazy indie-pop on offer
+  puts to shame the myriad of new bands working in this territory at the time.
+  [*Memory*: After this record came out I assumed it was the start of a glorious
+  comeback for this guy. I didn't realize it was the end.]
+
+- *Someone to Drive You Home* by **The Long Blondes** - Very derivative of the
+  long history of post-punk and new wave, but the execution is perfect. In
+  retrospect this can almost be seen as the period on the post-punk revival.
+  This is where the new wave revival and imaginary 80s began. [*Memory*: I have
+  always been unable to process exactly how much I like this record for some
+  reason. When it was getting good press back in '06 I was so resistant to it.
+  When I reviewed my candidates when making this list, I was tempted to leave it
+  off. After half a listen I was rushing off to find a vinyl copy on discogs.]
+
+- *Pretty Little Head* by **Nellie Mckay** - Another double album genre
+  experiment, this time on an indie label, where this belongs. Less white girl
+  rapping, and what remains is well done. The genres here are more looking back
+  on Broadway and cabaret music, with some alt rock thrown in. [*Memory*: One of
+  the first records I remember buying on eMusic. It was very surprising to see
+  her on an indie, though it certainly made far more sense than this kind of
+  thing being on Columbia. I had started using the eMusic platform in 2006 and
+  its subscription based buffet was becoming very influential in my tastes.]
+
+- *You Are There* by **Mono** - Post-rock was a very tired scene by 2006, and
+  these guys were one of the last great bands to emerge. Somewhere between the
+  shimmering guitars of **Explosions in the Sky** and the chaotic strings of
+  **Godspeed You! Great Emperor** maybe the last listenable combination of
+  elements left to cover. Their finest record, with their definitive track
+  "Moonlight". [*Memory*: This album, and particularly the track "Moonlight" was
+  one of the great rediscoveries while making this list. I streamed it during a
+  morning walk during a review of the albums on the bubble for the year. I
+  probably streamed it half a dozen more times that day.]
+
+- *Black Holes and Other Revelations* by **Muse** - This was the record that
+  would finally break these guys in America, more due to better promotion than
+  any shift in sound or quality. Still very big alt-rock music, with perhaps a
+  bit more of the **Queen** style theatrics. The hit "Supermassive Back Hole"
+  introduces a funky kind of groove that would hit at the broader template that
+  would be used in the next few records. Looking back, this probably was the
+  peak of their first era, and it makes me a little sad since I don't like their
+  new direction quite as much. [*Memory*: Another time when I got to feel a bit
+  ahead of my time thanks to the expanded playlist of satellite radio.]
+
+- *Bring Me the Workhorse* by **My Brightest Diamond** - I became aware of Shara
+  Nova through her work with **Sufjan Stevens** and **The Decemberists**, which
+  led me to her solo catalog. Her debut is a subdued, and often moody record. At
+  times it feels like a gentler, more classically trained **PJ Harvey** album.
+  I don't listen to this as much as her later work, but it is still a great one.
+  [*Memory*: In the early days of my vinyl collecting, I could still buy back
+  stock first pressings of records that weren't big sellers. That is how I got
+  this one around 2010.]
+
+- *He Poos Clouds* by **Owen Pallett** - I became aware of this record on the
+  Pitchfork best of 2006 list, so I gave it a download on eMusic. They compared
+  it to **Andrew Bird**, but aside from the violin, I don't know why. This is
+  some very out there, art-rock that is heavily influenced by contemporary
+  classical music. I liked bits of it at the time, I love it now. A complex and
+  difficult album, and a first class performance and recording. [*Memory*: This
+  along with **Shara Nova** was my gateway into contemporary classical. It was
+  very sneaky how they got me to accept the complex sounds by wrapping it in pop
+  songs.]
+
+- *Writer's Block* by **Peter, Bjorn, and John** - "Hey Google, play the hipster
+  whistling song." This was the first time that an indie artist made a song that
+  felt like it was designed for commercials. This was the genesis of mainstream
+  indie (or mindie as Carles liked to call it). That does nothing to tarnish an
+  outstanding indie pop record, and really it only helped to elevate the status,
+  and increase the production of great indie-pop records. [*Memory*: I heard
+  (the now legendary) "Young Folks" for the first time when it was playing in
+  the background of Otto's Pub and Brewery, my hangout at the time. I stopped at
+  Best Buy on the way home, hoping to find a CD copy. I came home with what
+  would become one of my favorite records of the year.]
+
+- *We Are the Pipettes* by **The Pipettes** - In the mid 2000s, there were
+  constantly new genres of indie that were going to be the next big thing, but
+  produced a few big records before fading away. "Pre-Beatles pop-music" was
+  such an animal, and the 60s girl groups were an obvious place find
+  inspiration. In retrospect this does seem like the kind of gimmick that
+  wouldn't last long, but what a glorious debut record. They sing in an
+  untrained but pure tone that sounds great together. The pop songwriting is
+  great, especially on the classic "Pull Shapes". [*Memory*: Yet another band
+  that I discovered on HDNet London Live. It was such a surprise to see such an
+  out there concept get any attention at all. I remember having Greg at City
+  Lights order me a copy of their first US EP, and him asking me "so is this
+  like a 60s girl group or something?" Kinda, but not exactly in a way that
+  really, really worked for a short time.]
+
+- *Operation: Mindcrime II* by **Queensryche** - What a huge surprise. A sequel
+  to one of my favorite albums of all time arrived, and it was far better than I
+  could have imagined. A remarkable return to the classic sound of this band, we
+  now know it mostly a Geoff Tate solo album. It would have been impossible to
+  achieve the same high level of the original, but this is about 75% the
+  quality, which is still very, very good. More than anything it takes the story
+  to a new place, that somehow makes the first record more interesting from a
+  narrative perspective. [*Memory*: I hadn't thought much about these guys in
+  years when I heard that this was coming out. Thanks to this record I would
+  re-engage with their back-catalog and they would become one of my all-time
+  favorites.]
+
+- *Classics* by **Ratatat** - Instrumental rock that is very much not post-rock,
+  this whimsical record is more like the modern **Ventures**. One of those bands
+  where every album is very similar, and I only end up caring about their very
+  best effort. [*Memory*: In 2007, I went on a bus tour of the Irish
+  countryside north of Dublin. I remember a rich doctor was there with his wife
+  and adult son who was wearing a Ratatat shirt. Why do I remember this, I don't
+  know. I've got nothing else for here.]
+
+- *Hello Everything* by **Squarepusher** - His records had been expanding to
+  include more and more elements, and the title of this one seems to recognize a
+  peak had been reached. After this he would bite off a bit more than he could
+  chew, but the eclecticism works out well here. The jazz influenced electronica
+  of "Planetarium" is a particular favorite, and probably the high point for
+  this guy. [*Memory*: I found out about this artist on XM Beyond Jazz, where I
+  heard "Modern Jazz Guitar". The early XM was a great platform, and while I am
+  still a happy customer of the modern SiriusXM, I miss those old stations with
+  their edge case genres, and massive, handcrafted playlists.]
+
+- *A Lesson in Crime* by **Tokyo Police Club** - Sometimes a band's first work
+  is their best, and in this case it is a 17 minute long EP. The rawness and
+  rough edges are a positive here, and it is almost like they ruined themselves
+  by started to understand what they were doing. This is pure garage, the sounds
+  of kids who don't completely know how to make rock music, but do so pretty
+  effectively anyway. The songs are strange and wonderful, particularly the
+  charmingly amateurish science fiction of "Citizens of Tomorrow". They would
+  never come close to this again. This is my favorite EP of all time. [*Memory*:
+  I saw the band play an opening set as "the next big thing" in a packed to the
+  gills basement club in Temple Bar Dublin. They played the EP in sequence and
+  nothing more. They pulled a girl up from the crowd to sing the one line of
+  female vocals from "Nature of the Experiment". A buzz band at their peak, and
+  I was glad to be there.]
 
 2007
 ----
@@ -243,7 +449,7 @@ to summarize where pop music was in 2007 and my relationship with it.
 
 .. image:: images/2007.jpg
   :width: 900
-  :alt: My 2008 favorite albums
+  :alt: My 2007 favorite albums
 
 .. raw:: html
 
